chore: create data services

--- a/src/app/core/landing/split-landing/split-landing.html
+++ b/src/app/core/landing/split-landing/split-landing.html
@@ -33,7 +33,7 @@
           <h1
             class="md:text-5xl sm:text-2xl font-extrabold tracking-wide text-white mb-4 text-shadow-xs"
           >
-            Magic: The Gathering
+            {{tournamentName}}
           </h1>
           <p
             class="text-lg md:text-xl font-bold text-white/90 mb-6 text-shadow-xs"
