--- a/src/app/features/home/tournaments/tournaments.html
+++ b/src/app/features/home/tournaments/tournaments.html
@@ -1,6 +1,6 @@
-<div class="w-screen h-screen relative select-none font-sans">
+<div class="w-full min-h-screen relative select-none font-sans">
   <!-- Contenedor central con proporción 16:9 y contenido centrado -->
-  <div class="absolute inset-0 flex items-center justify-center z-10 shadow-lg">
+  <div class="inset-0 flex items-center justify-center z-10 shadow-lg">
     <div
       class="aspect-[16/9] w-full bg-transparent overflow-hidden shadow-lg flex"
     >
