--- a/src/app/core/landing/split-landing/split-landing.html
+++ b/src/app/core/landing/split-landing/split-landing.html
@@ -155,7 +155,7 @@
             {{ split.slogan }}
           </p>
           <button
-            class="bg-blue-600 hover:bg-blue-800 text-white font-semibold shadow-strong rounded px-8 py-2 sm:text-lg md:text-xl shadow-lg transition"
+            class="bg-blue-600 hover:bg-blue-800 text-white font-semibold shadow-strong rounded px-8 py-2 sm:text-lg md:text-xl shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-400"
           >
             ENTRAR
           </button>
