--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,20 @@ body,
 html {
   font-family: "Rubik", "ui-sans-serif", "system-ui", sans-serif;
 }
+
+@layer utilities {
+  @keyframes fade-in-up {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fade-in-up {
+    animation: fade-in-up 0.8s ease-out forwards;
+  }
+}
