--- a/src/app/core/header/header.html
+++ b/src/app/core/header/header.html
@@ -8,10 +8,6 @@
         class="h-8"
         alt="artabrian-weekend-logo"
       />
-      <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >Artabrian Weekend 2025</span
-      >
     </a>
     <button
       data-collapse-toggle="navbar-default"
@@ -43,7 +39,7 @@
       >
         <li>
           <a
-            href="#"
+            href="home"
             class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
             aria-current="page"
             >Inicio</a
@@ -51,30 +47,23 @@
         </li>
         <li>
           <a
-            href="#"
+            href="tournaments"
             class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Torneos</a
           >
         </li>
         <li>
           <a
-            href="#"
-            class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-            >Horarios</a
-          >
-        </li>
-        <li>
-          <a
-            href="#"
+            href="location"
             class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
             >Localización</a
           >
         </li>
         <li>
           <a
-            href="#"
+            href="contact"
             class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-            >Contact</a
+            >Contacto</a
           >
         </li>
       </ul>
