--- a/src/app/features/home/locationSection/locationSection.html
+++ b/src/app/features/home/locationSection/locationSection.html
@@ -8,29 +8,66 @@
     class="hidden md:flex relative min-h-screen items-center justify-center"
     [style.backgroundImage]="'url(' + backgroundPath + ')'"
     style="background-position: center; background-size: cover"
-  >
-    <div class="absolute inset-0 bg-black opacity-50"></div>
-  </div>
+  ></div>
 
-  <!-- Columna derecha: texto arriba y mapa abajo cada uno 50% -->
-  <div *ngIf="locationData" class="flex flex-col min-h-screen">
-    <div class="flex-1 flex items-start justify-center bg-neutral-100 p-8">
-      <div class="w-full max-w-xl text-left space-y-4">
-        <h2 class="text-3xl font-bold text-black">Localización</h2>
+  <!-- Columna derecha: mapa arriba, texto abajo -->
+  <div *ngIf="locationData" class="flex flex-col min-h-screen relative">
+    <!-- Mapa arriba (50% altura) -->
+    <div class="relative z-10">
+      <app-map></app-map>
+    </div>
+
+    <!-- Texto abajo (50% altura) -->
+    <div class="flex flex-col p-12 space-y-2 relative z-10 bg-gray-100">
+      <h1
+        class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-4 leading-snug"
+      >
+        Localización
+      </h1>
+      <div class="w-full text-left space-y-4">
+        <h2 class="text-3xl font-bold text-black">Pazo do Monte</h2>
         <p class="text-lg text-black font-semibold break-words">
           {{ locationData.adress }}
         </p>
-        <a
-          [href]="locationData.geopath"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="inline-block mt-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-md text-white font-semibold transition"
-        >
-          Ver en Google Maps
-        </a>
-      </div>
-    </div>
+        <p class="text-black text-base">
+          El acceso al Pazo do Monte en Ferrol es sencillo y cómodo en coche,
+          con un aparcamiento privado y amplio para más de 50 vehículos. El
+          recinto está próximo a núcleos urbanos y bien señalizado, lo que
+          facilita el acceso desde cualquier punto de la ciudad y alrededores.
+          Se recomienda tomar la siguiente ruta:
+        </p>
 
-    <div class="flex-1 bg-white rounded-lg overflow-hidden shadow-lg"></div>
+        <ul>
+          <li>
+            ◉ Autopista <strong class="text-blue-600">AP-9</strong> en dirección
+            Ferrol, saliendo en la
+            <strong class="text-blue-600">25-F</strong> hacia el
+            <strong class="text-blue-600"
+              >Polígono industrial de Vilar do Colo</strong
+            >.
+          </li>
+          <li>
+            ◉ Desde esa salida, conecta con la vía rápida
+            <strong class="text-blue-600">VG-12</strong> y toma la salida
+            <strong class="text-blue-600">4</strong>, hacia San Pedro de Leixa.
+          </li>
+          <li>
+            ◉ Dirígete a la dirección exacta:
+            <strong class="text-blue-600"
+              >San Pedro de Leixa 82, 15405, Ferrol.</strong
+            >
+          </li>
+        </ul>
+      </div>
+      <a
+        href="https://maps.app.goo.gl/8Peteri8S8t1mD118"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Inscríbete al torneo"
+        class="w-max mt-6 px-6 text-base font-semibold rounded shadow-lg text-white hover:bg-blue-800 bg-blue-600 transition transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-400 sm:px-8 sm:py-4 md:px-10 md:py-4 sm:text-lg md:text-xl"
+      >
+        Google Maps
+      </a>
+    </div>
   </div>
 </div>
